--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.6.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-drag-drop-files": "^2.3.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.4.5",
